Fix graph so that it doesn't overflow

--- a/src/static/css/_globals.scss
+++ b/src/static/css/_globals.scss
@@ -132,6 +132,9 @@ h6 {
   background-color: var(--background-alt-pink-tuile);
 }
 
+.at-text-red {
+  color: var(--text-action-high-red-marianne);
+}
 
 .fr-footer-content__link {
   font-weight: 700;
